# speech-generator

./: .gitignore  CLI_DESIGN_PRINCIPLES.md  Dockerfile  OPERATIONAL_MODEL_PROPOSAL.md  README.md  SESSION_HANDOFF.md  TASK_SOW.md  app.py  install.sh  pyproject.toml  requirements.txt  synthesize_cli.py  uninstall.sh
man/: tts-synthesize.1
templates/: index.html
yandex_speech_cli/: cli.py
